Make sure 'Documentation' in nav bar doesn't overflow in responsive and dark themes.

--- a/tinkerer/themes/responsive/static/responsive.css
+++ b/tinkerer/themes/responsive/static/responsive.css
@@ -57,6 +57,7 @@ nav a {
 
     color: white;
     background: #e44d26;
+    overflow: hidden;
 }
 
 nav a:hover,
